@@ -28,6 +28,7 @@
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
     ADDED: virtual VFS (try virt:/somthing/)
 
+    FIXED: [ 1037003 ] konqueror style drag and drop
     FIXED: [ 1076865 ] the default search text is '*'
     FIXED: [ 976598 ] krusader occasionally crashes at closing the viewer
     FIXED: [ 1033319 ] Relative paths dont get auto-completed
